--- a/core.html
+++ b/core.html
@@ -127,7 +127,90 @@
           <li><strong>Conversion</strong> practice turning into marks</li>
         </ul>
         <div class="tracker-sample">
-          <img src="/assets/tracker-sample.png" alt="Sample weekly tracker table" loading="lazy">
+          <div class="tracker-table-wrap" role="group" aria-label="Sample weekly tracker table">
+            <table class="tracker-table">
+              <thead>
+                <tr>
+                  <th scope="col">Test</th>
+                  <th scope="col">Time (min)</th>
+                  <th scope="col">Allowed (min)</th>
+                  <th scope="col">RowType</th>
+                  <th scope="col">Q1</th>
+                  <th scope="col">Q10</th>
+                  <th scope="col">Total Marks</th>
+                  <th scope="col">Attempted</th>
+                  <th scope="col">Max Marks</th>
+                  <th scope="col">Coverage</th>
+                  <th scope="col">Conversion</th>
+                  <th scope="col">Score</th>
+                  <th scope="col">Speed</th>
+                  <th scope="col">Focus</th>
+                  <th scope="col">Notes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="rowgroup" rowspan="8" class="tracker-test">Maths Diagnostic -<br><span>24/09/2025</span></th>
+                  <td rowspan="8" class="tracker-time"><span>47</span></td>
+                  <td rowspan="8" class="tracker-allowed"><span>40</span></td>
+                  <th scope="row" class="tracker-rowtype">Marks</th>
+                  <td class="tracker-q">9</td>
+                  <td class="tracker-q">6</td>
+                  <td class="tracker-total" rowspan="8"><strong>58</strong></td>
+                  <td class="tracker-attempted" rowspan="8"><strong>66</strong></td>
+                  <td class="tracker-max" rowspan="8"><strong>70</strong></td>
+                  <td class="tracker-coverage" rowspan="8"><strong>94%</strong></td>
+                  <td class="tracker-conversion" rowspan="8"><strong>88%</strong></td>
+                  <td class="tracker-score" rowspan="8"><strong>83%</strong></td>
+                  <td class="tracker-speed" rowspan="8"><strong>65%</strong></td>
+                  <td class="tracker-focus" rowspan="8"><strong>89%</strong></td>
+                  <td class="tracker-notes" rowspan="8">
+                    <ol class="tracker-notes-list">
+                      <li>Careless: 4 recoverable marks across Q1, Q5, Q6; introduce a strict 30s end-check per item.</li>
+                      <li>Topics to practice: Quadratics (Q4) and exp-log equations (Q9) first; light tune-up on coordinate geometry and trig.</li>
+                      <li>Technique to start: 3-step workflow — plan the method in one line, solve neatly, then SCAN check (signs, cancellation, algebra, numbers).</li>
+                      <li>Next steps: 12 timed drills this week (6 quadratics, 6 exp-log) with a 3.5 min cap; rework misses; mini-retest to target 63–66 out of 70.</li>
+                    </ol>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Max</th>
+                  <td class="tracker-q">10</td>
+                  <td class="tracker-q">6</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Careless</th>
+                  <td class="tracker-q">1</td>
+                  <td class="tracker-q">0</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Attempted</th>
+                  <td class="tracker-q">10</td>
+                  <td class="tracker-q">6</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Lapsed (s)</th>
+                  <td class="tracker-q">270</td>
+                  <td class="tracker-q">2800</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Duration (s)</th>
+                  <td class="tracker-q">270</td>
+                  <td class="tracker-q">370</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Speed per Q</th>
+                  <td class="tracker-q">1.08</td>
+                  <td class="tracker-q">0.47</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Topic</th>
+                  <td class="tracker-topic">Algebraic manipulation and factorisation</td>
+                  <td class="tracker-topic">Binomial expansion and coefficients</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <p class="note">Green bands at 85 percent for Score, Speed, Focus. Coverage and Conversion trend week by week.</p>
         </div>
         <div class="sla">
