--- a/core.html
+++ b/core.html
@@ -165,12 +165,14 @@
                   <td class="tracker-speed" rowspan="8"><strong>65%</strong></td>
                   <td class="tracker-focus" rowspan="8"><strong>89%</strong></td>
                   <td class="tracker-notes" rowspan="8">
-                    <ol class="tracker-notes-list">
-                      <li>Careless: 4 recoverable marks across Q1, Q5, Q6; introduce a strict 30s end-check per item.</li>
-                      <li>Topics to practice: Quadratics (Q4) and exp-log equations (Q9) first; light tune-up on coordinate geometry and trig.</li>
-                      <li>Technique to start: 3-step workflow — plan the method in one line, solve neatly, then SCAN check (signs, cancellation, algebra, numbers).</li>
-                      <li>Next steps: 12 timed drills this week (6 quadratics, 6 exp-log) with a 3.5 min cap; rework misses; mini-retest to target 63–66 out of 70.</li>
-                    </ol>
+                    <div class="tracker-notes-content">
+                      <ol class="tracker-notes-list">
+                        <li>Careless: 4 recoverable marks across Q1, Q5, Q6; introduce a strict 30s end-check per item.</li>
+                        <li>Topics to practice: Quadratics (Q4) and exp-log equations (Q9) first; light tune-up on coordinate geometry and trig.</li>
+                        <li>Technique to start: 3-step workflow — plan the method in one line, solve neatly, then SCAN check (signs, cancellation, algebra, numbers).</li>
+                        <li>Next steps: 12 timed drills this week (6 quadratics, 6 exp-log) with a 3.5 min cap; rework misses; mini-retest to target 63–66 out of 70.</li>
+                      </ol>
+                    </div>
                   </td>
                 </tr>
                 <tr>
