tracker table #4 - ... column

--- a/core.html
+++ b/core.html
@@ -52,7 +52,7 @@
         <p class="track-overline">Accountable tutoring, consistent success.</p>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* | Imperial College Computing (AI) | 98% Maths A Level | BPhO Gold </div>
+        <div class="trust-hook">4×A* | Imperial College Computing (AI) | 98% Maths A Level | BPhO Gold Medal</div>
 
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
@@ -136,6 +136,7 @@
                   <th scope="col">Allowed (min)</th>
                   <th scope="col">RowType</th>
                   <th scope="col">Q1</th>
+                  <th scope="col">...</th>
                   <th scope="col">Q10</th>
                   <th scope="col">Total Marks</th>
                   <th scope="col">Attempted</th>
@@ -155,6 +156,7 @@
                   <td rowspan="8" class="tracker-allowed"><span>40</span></td>
                   <th scope="row" class="tracker-rowtype">Marks</th>
                   <td class="tracker-q">9</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">6</td>
                   <td class="tracker-total" rowspan="8"><strong>58</strong></td>
                   <td class="tracker-attempted" rowspan="8"><strong>66</strong></td>
@@ -176,36 +178,43 @@
                 <tr>
                   <th scope="row" class="tracker-rowtype">Max</th>
                   <td class="tracker-q">10</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">6</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Careless</th>
                   <td class="tracker-q">1</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">0</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Attempted</th>
                   <td class="tracker-q">10</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">6</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Lapsed (s)</th>
                   <td class="tracker-q">270</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">2800</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Duration (s)</th>
                   <td class="tracker-q">270</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">370</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Speed per Q</th>
                   <td class="tracker-q">1.08</td>
+                  <td class="tracker-q is-empty"></td>
                   <td class="tracker-q">0.47</td>
                 </tr>
                 <tr>
                   <th scope="row" class="tracker-rowtype">Topic</th>
                   <td class="tracker-topic">Algebraic manipulation and factorisation</td>
+                  <td class="tracker-topic tracker-topic--spacer"></td>
                   <td class="tracker-topic">Binomial expansion and coefficients</td>
                 </tr>
               </tbody>
