--- a/index.html
+++ b/index.html
@@ -2,16 +2,289 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Philipp Tutoring</title>
-  <meta http-equiv="refresh" content="0; url=core.html">
-  <link rel="canonical" href="core.html">
-  <meta name="robots" content="noindex,follow">
+  <title>Philipp Tutoring — Computer Science</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Premium A Level Computer Science tutoring engineered for measurable mastery.">
+  <meta name="theme-color" content="#c65a72">
+  <!-- dev-only: disable caching while debugging -->
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap"></noscript>
+
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYTSZ8BF4Z"></script>
   <script>
-    (function(){
-      try { location.replace('core.html'); }
-      catch (_) { location.href = 'core.html'; }
-    })();
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-ZYTSZ8BF4Z');
   </script>
+
+  <!-- dev-only: cache-busting query while iterating -->
+  <link rel="stylesheet" href="/assets/styles.css?dev=1">
+
+  <link rel="preload" as="image" href="/assets/philipp-1200.avif" type="image/avif"
+        imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
+        imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
-<body aria-hidden="true"></body>
+<body class="page-cs">
+  <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
+    <img src="/favicon.svg" alt="Philipp favicon">
+  </a>
+
+  <section class="hero hero--specialist" role="banner">
+    <div class="hero-inner">
+      <div class="hero-left">
+        <p class="track-overline">Serious tuition for serious results.</p>
+        <h1 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">mastery</span>.</h1>
+        <p class="hero-sub">No guesswork: 5 performance indicators guarantee visible results.</p>
+        <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
+
+        <div class="cta">
+          <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+          <div class="cta-sub">No charge • 20 min</div>
+        </div>
+      </div>
+
+      <div class="hero-right">
+        <picture>
+          <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+          <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
+        </picture>
+      </div>
+    </div>
+
+    <a class="scroll-cue" href="#proof-extra" aria-label="Scroll for more">
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
+    </a>
+  </section>
+
+  <div class="delimiter delimiter--hero" aria-hidden="true"></div>
+
+  <main id="core-content">
+    <section id="proof-extra" class="section section-tight">
+      <div class="container">
+        <p class="eyebrow">Proof</p>
+        <ul class="badge-row">
+          <li class="badge">BMO Round 1 Distinction</li>
+          <li class="badge">Winning Maths Talk at The Royal Institution</li>
+          <li class="badge">92% Physics A Level</li>
+          <li class="badge">Led Physics Olympiad Society</li>
+          <li class="badge">1.5+ years teaching</li>
+        </ul>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="case" class="section section-tight">
+      <div class="container">
+        <p class="eyebrow">Case study</p>
+        <div class="case-grid">
+          <div>
+            <p class="stat">98%</p>
+            <p class="note">Maths A Level</p>
+          </div>
+          <div>
+            <p class="kicker">Edexcel Y13 went from low B (november) to A* (June). Weekly tracker showed conversion rising from 62% to 91%.</p>
+            <ul class="kpi-grid" role="list">
+              <li>Timing</li>
+              <li>Accuracy</li>
+              <li>Conversion</li>
+              <li>Coverage</li>
+              <li>Focus</li>
+            </ul>
+            <p class="note">We teach to exam board spec line-by-line, with weekly notes to parents.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="progress" class="section">
+      <div class="container">
+        <h2>Progress tracking</h2>
+        <p class="eyebrow">Progress tracker</p>
+        <p class="kicker">We log 5 indicators weekly and send parents a 3-line summary with a tracker screenshot.</p>
+        <div class="tracker-sample">
+          <div class="tracker-table-wrap" role="group" aria-label="Sample weekly tracker table">
+            <table class="tracker-table">
+              <thead>
+                <tr>
+                  <th scope="col" class="tracker-topic">Assessment</th>
+                  <th scope="col" class="tracker-time">Allowed (min)</th>
+                  <th scope="col" class="tracker-time">Actual (min)</th>
+                  <th scope="col" class="tracker-rowtype">Indicator</th>
+                  <th scope="col">Q1</th>
+                  <th scope="col">Q2</th>
+                  <th scope="col">Q3</th>
+                  <th scope="col">Total</th>
+                  <th scope="col">Attempted</th>
+                  <th scope="col">Max</th>
+                  <th scope="col">Coverage</th>
+                  <th scope="col">Conversion</th>
+                  <th scope="col">Score</th>
+                  <th scope="col">Speed</th>
+                  <th scope="col">Focus</th>
+                  <th scope="col">Notes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="rowgroup" rowspan="8" class="tracker-test">Maths Diagnostic -<br><span>24/09/2025</span></th>
+                  <td rowspan="8" class="tracker-time"><span>47</span></td>
+                  <td rowspan="8" class="tracker-allowed"><span>40</span></td>
+                  <th scope="row" class="tracker-rowtype">Marks</th>
+                  <td class="tracker-q">9</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">6</td>
+                  <td class="tracker-total" rowspan="8"><strong>58</strong></td>
+                  <td class="tracker-attempted" rowspan="8"><strong>66</strong></td>
+                  <td class="tracker-max" rowspan="8"><strong>70</strong></td>
+                  <td class="tracker-coverage" rowspan="8"><strong>94%</strong></td>
+                  <td class="tracker-conversion" rowspan="8"><strong>88%</strong></td>
+                  <td class="tracker-score" rowspan="8"><strong>83%</strong></td>
+                  <td class="tracker-speed" rowspan="8"><strong>65%</strong></td>
+                  <td class="tracker-focus" rowspan="8"><strong>89%</strong></td>
+                  <td class="tracker-notes" rowspan="8">
+                    <ol class="tracker-notes-list">
+                      <li>Revisit completion loops at start of every proof.</li>
+                      <li>Improve coverage: 2 unseen recursion questions assigned.</li>
+                      <li>Speed work: timed drill on maths sequences.</li>
+                    </ol>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Max</th>
+                  <td class="tracker-q">10</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">6</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Careless</th>
+                  <td class="tracker-q">1</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">0</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Attempted</th>
+                  <td class="tracker-q">10</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">6</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Lapsed (s)</th>
+                  <td class="tracker-q">270</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">2800</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Duration (s)</th>
+                  <td class="tracker-q">270</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">370</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Speed per Q</th>
+                  <td class="tracker-q">1.08</td>
+                  <td class="tracker-q is-empty"></td>
+                  <td class="tracker-q">0.47</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="tracker-rowtype">Topic</th>
+                  <td class="tracker-topic">Algebraic manipulation and factorisation</td>
+                  <td class="tracker-topic tracker-topic--spacer"></td>
+                  <td class="tracker-topic">Binomial expansion and coefficients</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <p class="note">Diagnostic tracker sample: timing, accuracy, and next actions in one view.</p>
+        </div>
+        <div class="sla">
+          <h3>Service level</h3>
+          <ul class="bullets">
+            <li>Update and summary sent by 22:00 on lesson day.</li>
+            <li>Messages 08:00–20:00 replied under 60 minutes.</li>
+            <li>Reschedule requests in hours above confirmed within 15 minutes.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="how" class="section">
+      <div class="container">
+        <h2>How it works</h2>
+        <ol class="steps">
+          <li><strong>Consult – 20 min, no charge.</strong> Goals and exam board.</li>
+          <li><strong>Diagnostic – 60 min, £30 credited.</strong> You get the tracker baseline.</li>
+          <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
+        </ol>
+        <p class="note"><strong>Ramp-up policy</strong>: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="pricing" class="section section-tight">
+      <div class="container">
+        <h2>Pricing</h2>
+        <div class="price-list">
+          <div class="price-item"><strong>Diagnostic</strong> – £30 – credited to month 1</div>
+          <div class="price-item"><strong>Monthly retainer</strong> – £360 – weekly 90 min – 12 week minimum</div>
+        </div>
+        <p class="note">Under 24 h cancellations are charged. One make-up per term with 24 h notice, subject to availability.</p>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="faq" class="section">
+      <div class="container">
+        <h2>FAQ</h2>
+        <details><summary>Do you set homework</summary><p>Yes. Short drills tied to weak topics. 60–90 minutes per week.</p></details>
+        <details><summary>Which boards</summary><p>Edexcel, OCR, AQA. We map work to the spec line by line.</p></details>
+        <details><summary>What tools do you use</summary><p>Zoom, OneNote or Miro, Excel tracker shared as screenshots each week.</p></details>
+        <details><summary>Can we reschedule</summary><p>With 24 h notice within the term, subject to availability. Under 24 h is charged.</p></details>
+        <details><summary>Parent visibility</summary><p>You get a weekly note and tracker screenshot after each lesson.</p></details>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="testimonials" class="section section-tight">
+      <div class="container">
+        <h2>Testimonials</h2>
+        <figure class="quote">
+          <blockquote>Philipp rebuilt my algebra and timing. Paper scores went from mid C to solid A.</blockquote>
+          <figcaption>Parent, Year 13, Edexcel Maths</figcaption>
+        </figure>
+        <figure class="quote">
+          <blockquote>Clear structure, no fluff, fast feedback. The weekly tracker made progress obvious.</blockquote>
+          <figcaption>Student, Year 12, Physics</figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
+
+  <footer class="floating-cta" aria-live="polite" aria-label="Book a consult">
+    <a href="https://calendly.com/philippmathsphysics/consult" class="btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+  </footer>
+
+  <!-- dev-only: cache-busting query while iterating -->
+  <script src="/assets/app.js?dev=1" defer></script>
+</body>
 </html>
