image update fixed

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
       <div class="hero-right">
         <picture>
-          <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
-          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+          <!-- <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
+          <!--<source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
           <!--<img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high"> -->
           <img src="/assets/philipp.png" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
         </picture>
