--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">Serious tuition for serious results.</p>
-        <h1 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">mastery</span>.</h1>
-        <p class="hero-sub">No guesswork: 5 performance indicators guarantee visible results.</p>
-        <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
+        <h1 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
+        <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
+        <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
           <div class="cta-sub">No charge • 20 min</div>
         </div>
+        <p class="guarantee">+1 GRADE in 3 months GUARANTEED*</p>
+        <p class="hero-footnote">*- If you do everything as I tell you, but in 3 months the grade hasn’t improved, I will slave working for FREE until we achieve that grade and refund ALL the money you paid for the last 3 months.</p>
       </div>
 
       <div class="hero-right">
