--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Philipp Tutoring — Computer Science</title>
+  <title>CS Prime Academy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Premium A Level Computer Science tutoring engineered for measurable mastery.">
   <meta name="theme-color" content="#c65a72">
-  <!-- dev-only: disable caching while debugging -->
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,8 +25,7 @@
     gtag('config', 'G-ZYTSZ8BF4Z');
   </script>
 
-  <!-- dev-only: cache-busting query while iterating -->
-  <link rel="stylesheet" href="/assets/styles.css?dev=1">
+  <link rel="stylesheet" href="/assets/styles.css">
 
   <link rel="preload" as="image" href="/assets/philipp-1200.avif" type="image/avif"
         imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
