--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
-        <h1 class="hero-title"><span class="hero-title-highlight">THE BREAKTHROUGH PROGRAMME</span><br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
+        <h1 class="hero-title">THE BREAKTHROUGH PROGRAMME<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
