--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
 <body class="page-cs">
+  <h1 class="page-banner-title">The Breakthrough Programme</h1>
   <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
@@ -40,7 +41,7 @@
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
-        <h1 class="hero-title">THE BREAKTHROUGH PROGRAMME<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h1>
+        <h2 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
