--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
+  <h1 class="hero-banner-title">The Breakthrough Programme</h1>
 
   <section class="hero hero--specialist" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
-        <h1 class="hero-title hero-title--breakthrough">The Breakthrough Programme</h1>
-        <h2 class="hero-kicker">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
+        <h2 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
