--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CS Prime Academy</title>
+  <title>CS Prime Academy – The Breakthrough Programme</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Premium A Level Computer Science tutoring engineered for measurable mastery.">
   <meta name="theme-color" content="#c65a72">
@@ -32,7 +32,7 @@
         imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
 <body class="page-cs">
-  <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
+  <a class="brand-mark" href="#" aria-label="CS Prime Academy home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
 
