bring guarantee earlier, pull everything up, make the banner title ink colour, emphasise the guarantee

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
         <h2 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
+        <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
@@ -50,7 +51,7 @@
           <div class="cta-sub">No charge • 20 min</div>
         </div>
         <p class="guarantee">+1 GRADE in 3 months GUARANTEED*</p>
-        <p class="hero-footnote">*- If you do everything as I tell you, but in 3 months the grade hasn’t improved, I will slave working for FREE until we achieve that grade and refund ALL the money you paid for the last 3 months.</p>
+        <p class="hero-footnote">* – If you do everything as I tell you, but in 3 months the grade hasn’t improved, I will slave working for FREE until we achieve that grade and refund ALL the money you paid for the last 3 months.</p>
       </div>
 
       <div class="hero-right">
