--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
         <h2 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
+        <figure class="hero-testimonial">
+          <img class="hero-testimonial__media" src="/assets/philipp.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
+          <figcaption class="hero-testimonial__content">
+            <p class="hero-testimonial__name">Natalie – envied by her neighbours for her son's results</p>
+            <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
+          </figcaption>
+        </figure>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
 
