remove the banner title, put in the header

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
   </a>
 
   <section class="hero hero--specialist" role="banner">
-    <h1 class="hero-banner-title">The Breakthrough Programme</h1>
     <div class="hero-inner">
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
-        <h2 class="hero-title">A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
+        <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
         <figure class="hero-testimonial">
           <img class="hero-testimonial__media" src="/assets/philipp.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
