shrunk the whole thing by 7%

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section class="hero hero--specialist" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <p class="track-overline">CS Prime Academy - serious tuition for serious results.</p>
+        <p class="track-overline">CS Prime Academy –– serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
@@ -47,11 +47,11 @@
         <figure class="hero-testimonial">
           <img class="hero-testimonial__media" src="/assets/philipp.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
           <figcaption class="hero-testimonial__content">
-            <p class="hero-testimonial__name">Natalie – envied by her neighbours for her son's results</p>
+            <p class="hero-testimonial__name">Natalie – envied by neighbours for her son's results</p>
             <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
           </figcaption>
         </figure>
-        
+
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
           <div class="cta-sub">No charge • 20 min</div>
