--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section class="hero hero--specialist" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <p class="track-overline">CS Prime Academy –– serious tuition for serious results.</p>
+        <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
@@ -47,14 +47,28 @@
         <figure class="hero-testimonial">
           <img class="hero-testimonial__media" src="/assets/philipp.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
           <figcaption class="hero-testimonial__content">
-            <p class="hero-testimonial__name">Natalie – envied by neighbours for her son's results</p>
+            <p class="hero-testimonial__name">Natalie — envied by neighbours for her son's results</p>
             <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
           </figcaption>
         </figure>
 
-        <div class="cta">
-          <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
-          <div class="cta-sub">No charge • 20 min</div>
+        <div class="cta-ensemble">
+          <div class="cta">
+            <a class="btn-primary" data-consult-link href="https://calendly.com/philippmathsphysics/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+            <div class="cta-sub">No charge • 20 min</div>
+          </div>
+
+          <aside class="cta-offer" aria-label="Special offer countdown">
+            <div class="cta-offer__timer">
+              <span class="cta-offer__timer-label">Offer ends in</span>
+              <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
+            </div>
+            <div class="cta-offer__body">
+              <p class="cta-offer__eyebrow">SPECIAL OFFER</p>
+              <p class="cta-offer__copy">BOOK FREE CONSULT TODAY TO GET THE £50 DIAGNOSTIC FOR FREE. NO CREDIT CARD.</p>
+            </div>
+            <span class="cta-offer__arrow" aria-hidden="true"></span>
+          </aside>
         </div>
         <p class="hero-footnote">* – If you do everything as I tell you, but in 3 months the grade hasn’t improved, I will slave working for FREE until we achieve that grade and refund ALL the money you paid for the last 3 months.</p>
       </div>
@@ -286,7 +300,7 @@
   </main>
 
   <footer class="floating-cta" aria-live="polite" aria-label="Book a consult">
-    <a href="https://calendly.com/philippmathsphysics/consult" class="btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+    <a class="btn-primary" data-consult-link href="https://calendly.com/philippmathsphysics/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
   </footer>
 
   <!-- dev-only: cache-busting query while iterating -->
